--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,35 @@
 *{
  margin: 1%;
 }
+.login {
+  background-color: #eeeeee;
+  display: flex;
+  flex-direction: column;
+  align-content:space-between;
+  justify-content: center;
+  height: 220px;
+  width: 50%;
+  margin: auto;
+  padding: 10px;
+  border: solid #4CAF50 0.5px;
+  
+}
+
+.login-btn {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 18px;
+  margin: 14px 6px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+.login-btn:hover {
+  background-color: #eeeeee;
+  color: #4CAF50;
+  border: 3px solid #4CAF50;
+}
