--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,9 @@
   border-radius: 5px;
   cursor: pointer;
 }
+.profile-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
