--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,15 @@
 .profile-container{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center; 
+  border: 1px solid rgb(235, 234, 234);
+  border-radius: 15px;
+  box-shadow: 4px 4px 8px 1px rgb(149, 148, 148);
+  margin: 0 15%;
+  padding: 2%;
+}
+img{
+  border: 7px solid  rgb(240, 236, 236);
   
 }
+
