--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,8 @@
   text-align: center;
 }
 
-.btn{
-  margin:2% 40%;
-  padding:1.5%;
-  background-color: rgb(89, 185, 86);
-  color:white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
+.edit-btn{
+  margin:2% 0% !important;
 }
 .box-container{
   display: flex;
@@ -20,6 +14,13 @@
   margin: 1% 15%;
   padding: 2% 6%;
 }
+.profile-container{
+  display: flex;
+  flex-direction:column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
 
 .image{
   border: 7px solid  rgb(240, 236, 236);
