--- a/src/App.css
+++ b/src/App.css
@@ -2,44 +2,40 @@
   text-align: center;
 }
 
-.btn{
-  margin:2% 40%;
-  padding:1.5%;
-  background-color: rgb(89, 185, 86);
-  color:white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
+.edit-btn{
+  margin:2% 0% !important;
 }
 .box-container{
   display: flex;
   flex-direction: column;
-  align-items: center; 
   border: 1px solid rgb(235, 234, 234);
   border-radius: 15px;
   box-shadow: 4px 4px 8px 1px rgb(149, 148, 148);
-  margin: 0 15%;
-  padding: 2%;
+  margin: 1% 15%;
+  padding: 2% 6%;
 }
-img{
-  border: 7px solid  rgb(240, 236, 236);
+.profile-container{
+  display: flex;
+  flex-direction:column;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-.homepage-content{
+
+.image{
+  border: 7px solid  rgb(240, 236, 236);
+}
+.navbar{
   display: flex;
   align-self: center;
   justify-content: space-between;
-  background:linear-gradient(
-    rgba(41, 41, 41, 0.7), 
-    rgba(41, 41, 41, 0.7)
-  ), url('../assets/banner.jpg') no-repeat fixed;
-  
-  height:100vh;
-}
-h1{
+  background-color: rgb(34, 34, 80);
+  font-size: 1.2rem;
   padding: 1%;
+  margin-bottom: 3%;
   color:white;
 }
+
 a{
  color:white;
   text-decoration: none;
@@ -47,7 +43,4 @@ a{
 a:hover{
   color: red;
 }
-.menu{
- padding: 1%;
-font-size: 1.2rem;
-}
+
